//指定proto3语法
syntax = "proto3";

//包名
package hello;

// 必须填写 这里的意义为: 生成代码在../api目录 使用'api'作为package名
option go_package = "./api;api";

//一个为Hello的服务(可定义多个服务,每个服务可定义多个方法)
service Hello {

  //一个SayHello的方法
  rpc SayHello (HelloRequest) returns (HelloResp) {}
}

// 定义发送请求信息
message HelloRequest {
  // 定义发送的参数
  // 参数类型 参数名 标识号(不可重复)
  string name = 1;
}

// 定义响应信息
message HelloResp {
  string message = 1;
}
